test/trivial/diten/printvisibleWrongName.good
printvisibleWrongName.chpl:3: error: get visible symbols may only have 0 or 2 arguments
