test/trivial/diten/printvisibleWrongName.chpl
var xyzSymbol = 1;
// ambiguous call, not enough args
__primitive(c"get visible symbols", true);
